fixed the bug with the margin outstretching body

--- a/style.css
+++ b/style.css
@@ -25,13 +25,15 @@ body {
     background: var(--bg-color);
     background-repeat: no-repeat;
     letter-spacing: 1px;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 header {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
+    /* position: fixed; */
+    width: 100%;
 }
 
 header .logo {
@@ -57,7 +59,10 @@ header .hamburger-menu {
 
 .my-photo {
     float: right;
-    margin-right: -60px;
+    position: relative;
+    /* display: inline-block; */
+    /* margin-left: 70px; */
+    /* padding-left: 60px; */
 }
 
 .my-photo img {
@@ -72,14 +77,14 @@ header .hamburger-menu {
 
 .my-photo::after {
     z-index: -1;
-    position: relative;
+    position: absolute;
     display: inline-block;
     content: "";
     border-radius: 10px;
     height: 75px;
     width: 75px;
     border: 3px solid var(--my-blue);
-    right: 77px;
+    left: 7px;
     top: 7px;
 }
 /* .my-photo {
@@ -161,6 +166,10 @@ button {
     font-size: 14px;
 }
 
+section:not(:first-of-type) {
+    margin: 0px 16px;
+}
+
 section:nth-of-type(1) {
     display: flex;
     flex-direction: column;
@@ -169,10 +178,12 @@ section:nth-of-type(1) {
     min-height: 100vh;
 }
 
-section:nth-of-type(2) {
-    margin: 0px 16px;
-}
 
+
+section:nth-of-type(3) {
+    margin-top: 75px;
+
+}
 h1 {
     overflow: hidden;
     text-align: center;
